# projeto.server.cplus

./: .gitignore  CMakeLists.txt  COMO-COMPILAR.md  ESTRUTURA.md  Makefile  QUICKSTART.md  README.md  USAGE.md  WORKFLOW.md  demo.sh  lexer_demo
doc/: COMPONENTS.md  GUIDE.md  README.md  architecture.md  development-guide.md  shell-implementation.md  technical-decisions.md
include/: PUBLICO.md
include/lexer/: scanner.h
include/shell/: repl.h
src/: main.cpp
src/lexer/: README.md  lexer_demo.cpp  scanner.cpp
src/lexer/scanner/: scan_comment.cpp  scan_identifier.cpp  scan_number.cpp  scan_string.cpp
src/shell/: repl.cpp
